# guardian-db

./: CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  tarpaulin.toml
.github/: FUNDING.yml
.github/workflows/: README.md  check.yml  release.yml  rust.yml
benches/: iroh_gossipsub_performance.rs
docs/: BENCHMARKS.md  CACHE_FIXES.md  COVERAGE.md  DATASTORE_IMPROVEMENTS.md  DIRECT_CHANNEL_IMPROVEMENTS.md  IDENTITY_VERIFICATION_IMPLEMENTATION.md  IPFS_CORE_API_README.md  REFACTORING_IPFS_CORE_API.md  REFACTORING_RAW_PUBSUB.md  STORAGE_ARCHITECTURE.md  STORAGE_REVIEW.md  event_bus_implementation.md  eventbus_integration_iface.md  events_eventbus_integration.md  ipfslogio_removal_analysis.md  kubo_core_api_implementation_summary.md  kubo_core_api_migration.md  kubo_core_api_readme.md  kubo_migration_analysis.md  replicator_eventbus_integration.md
docs/access_controller/: ACCESS_CONTROLLER_MANIFEST.md  ACCESS_CONTROLLER_MOD.md  ACCESS_CONTROLLER_TRAITS.md  ACCESS_CONTROLLER_UTILS.md  GUARDIAN_DB_ACCESS_CONTROLLER.md  IPFS_ACCESS_CONTROLLER_IMPLEMENTATION.md  IROH_ACCESS_CONTROLLER_IMPLEMENTATION.md  SIMPLE_ACCESS_CONTROLLER_IMPLEMENTATION.md
docs/cache/: CACHE.md  LEVEL_DOWN_CACHE.md
docs/ipfs_core_api/backends/: BATCH-PROCESSOR.md  CONNECTION-POOL.md  HYBRID-BACKEND.md  IROH-BACKEND.md  IROH-PUBSUB.md  KEY-SYNCHRONIZER.md  NETWORKING-METRICS.md
docs/iroh/backends/: BATCH-PROCESSOR.md  CONNECTION-POOL.md  IROH-BACKEND.md  IROH-PUBSUB.md  KEY-SYNCHRONIZER.md  NETWORKING-METRICS.md
docs/old docs/: DOCUMENT_STORE_MIGRATION.md  PROTOCOL_RESPONSIBILITIES.md  STORAGE_REVIEW.md
examples/: P2P_CHAT_README.md  access_control_verification_demo.rs  access_controller_create_concrete.rs  access_controller_create_demo.rs  access_controller_resolve_concrete.rs  access_controller_resolve_demo.rs  advanced_discovery_demo.rs  behaviour_functionality_demo.rs  connection_pool_demo.rs  constructor_functionality_demo.rs  dht_discovery_complete_demo.rs  dht_discovery_demo.rs  direct_channel_transport_demo.rs  event_bus_usage.rs  event_bus_usage_demo.rs  fsstore_persistence_demo.rs  guardian_access_controller_test.rs  hybrid_backend_demo.rs  identity_verification_demo.rs  ipfs_access_controller_concrete_demo.rs  ipfs_core_api_demo.rs  iroh_access_controller_demo.rs  iroh_concrete_api_demo.rs  iroh_gossipsub_integration_demo.rs  iroh_node_functionality_demo.rs  iroh_node_functionality_test.rs  iroh_pin_implementation_demo.rs  key_synchronization_demo.rs  key_synchronizer_demo.rs  kubo_core_api_simple.rs  kubo_core_api_usage.rs  listener_bind_demo.rs  networking_metrics_demo.rs  networking_metrics_integrated_demo.rs  p2p_chat_demo.rs  p2p_chat_tui.rs  p2p_endpoint_demo.rs  performance_monitor_demo.rs  performance_optimization_demo.rs  production_integration_demo.rs  (+5 more)
scripts/: coverage.ps1  coverage.sh  release.ps1  release.sh  update-badges.ps1  update-badges.sh
src/: address.rs  base_guardian.rs  data_store.rs  db_manifest.rs  error.rs  events.rs  guardian.rs  iface.rs  keystore.rs  kubo_core_api.rs  lib.rs  message_marshaler.rs  reactive_synchronizer.rs  traits.rs
src/access_control/: acl_guardian.rs  acl_iroh.rs  acl_simple.rs  manifest.rs  mod.rs  traits.rs
src/access_controller/: guardian.rs  ipfs.rs  manifest.rs  mod.rs  simple.rs  traits.rs  utils.rs
src/cache/: cache.rs  level_down.rs  mod.rs
src/eqlabs_ipfs_log/: access_controller.rs  entry.rs  identity.rs  identity_provider.rs  iface.rs  lamport_clock.rs  log.rs  mod.rs
src/guardian/: core.rs  error.rs  mod.rs  serializer.rs
src/ipfs_core_api/: client.rs  compat.rs  config.rs  errors.rs  mod.rs  types.rs
src/ipfs_core_api/backends/: batch_processor.rs  connection_pool.rs  hybrid.rs  iroh.rs  iroh_pubsub.rs  key_synchronizer.rs  mod.rs  networking_metrics.rs  optimized_cache.rs
src/ipfs_log/: access_controller.rs  entry.rs  identity.rs  identity_provider.rs  iface.rs  lamport_clock.rs  log.rs  mod.rs  traits.rs
src/log/: access_control.rs  entry.rs  identity.rs  identity_provider.rs  lamport_clock.rs  mod.rs  traits.rs
src/p2p/: events.rs  manager.rs  mod.rs
src/p2p/messaging/: direct_channel.rs  mod.rs  one_on_one_channel.rs
src/p2p/network/: client.rs  config.rs  mod.rs  types.rs
src/p2p/network/core/: batch_processor.rs  blobs.rs  connection_pool.rs  docs.rs  gossip.rs  key_synchronizer.rs  mod.rs  networking_metrics.rs  (+1 more)
src/p2p/pubsub/: direct_channel.rs  mod.rs  one_on_one_channel.rs  raw.rs
src/pubsub/: core_api.rs  direct_channel.rs  event.rs  mod.rs  one_on_one_channel.rs  raw.rs
src/stores/: events.rs  mod.rs
src/stores/base_store/: base_index.rs  base_store.rs  index.rs  mod.rs  noop_index.rs  utils.rs
src/stores/document_store/: document.rs  index.rs  mod.rs
src/stores/event_log_store/: index.rs  log.rs  mod.rs
src/stores/kv_store/: index.rs  keyvalue.rs  mod.rs
src/stores/operation/: mod.rs  operation.rs  traits.rs
src/stores/replicator/: events.rs  mod.rs  queue.rs  replication_info.rs  replicator.rs  traits.rs
src/tests/: access_control_permission_test.rs  access_control_permission_tests.rs  access_controller_registration_test.rs  acl_guardian_comprehensive_test.rs  acl_simple_test.rs  base_store_test.rs  batch_processor_test.rs  connection_pool_test.rs  crdt_log_test.rs  direct_channel_test.rs  document_store_test.rs  event_log_store_test.rs  gossip_test.rs  guardian_core_test.rs  guardian_wrapper_integration_test.rs  guardian_wrapper_test.rs  identity_verification_test.rs  identity_verification_tests.rs  iroh_access_controller_test.rs  iroh_backend_test.rs  keyvalue_test.rs  kv_store_test.rs  manifest_test.rs  mod.rs  networking_metrics_test.rs  optimized_cache_test.rs  serializer_test.rs
src/tests/access_control/: mod.rs  test_access_control_utils.rs  test_adapters.rs  test_address_validation.rs  test_controller_creation.rs
tests/: README.md  integration_access_control.rs  integration_lifecycle.rs  integration_persistence.rs  integration_replication.rs  test_determinism.rs
tests/common/: mod.rs
