[package]
name = "guardian-db"
version = "0.11.18"
authors = ["William Maslonek <wmaslonek@icloud.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90.0"
description = "High-performance, local-first decentralized database built on Rust and Iroh"
repository = "https://github.com/wmaslonek/guardian-db/"
readme = "README.md"
homepage = "https://www.willsearch.com.br/"
documentation = "https://docs.rs/guardian-db"
keywords = ["database", "p2p", "iroh", "decentralized", "crdt"]
categories = ["database-implementations", "network-programming", "web-programming"]

[dependencies]
async-trait = "0.1.89"
async-stream = "0.3.6"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.3"
futures = "0.3.31"
opentelemetry = "0.31.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.9.2"
rand_core = "0.6.4" # Iroh 0.92.0 uses rand_core 0.6.4 internally
hex = "0.4.3"
sled = "0.34.7"
iroh = { version = "0.92.0", features = ["default", "discovery-local-network"] } #We will update it again when version 1.0 is released
iroh-io = "0.6.0"
iroh-blobs = "0.94.0" #We will update it again when version 1.0 is released
iroh-gossip = "0.92.0" #We will update it again when version 1.0 is released
iroh-docs = "0.92.0" #We will update it again when version 1.0 is released
bytes = "1.9.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
uuid = { version = "1.18.1", features = ["serde"] }
blake3 = "1.8.2"
lru = "0.16.1"
zstd = "0.13.3"
futures-lite = "2.6.1"
postcard = { version = "1.1.3", features = ["use-std"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.8.0"

[[bench]]
name = "iroh_gossipsub_performance"
harness = false
